--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,7 +1,7 @@
 name: Scheduled Price Check
 on:
-    schedule:
-    - cron: '0 */6 * * *' # every 6 hours
+    # schedule:
+    # -cron: '0 */6 * * *' # every 6 hours
     workflow_dispatch: {}
 
 
